[package]
name = "hyperdav"
description = "WebDAV client"
repository = "https://github.com/jgillich/hyperdav"
version = "0.1.2"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"
documentation = "http://jgillich.github.io/hyperdav/hyperdav/webdav/index.html"

[dependencies]
xml-rs = "0.3"
hyper = "0.9"
url = "1.1"

[dev-dependencies]
uuid = "0.1"
