[package]
name = "hyperdav"
description = "WebDAV client"
repository = "https://github.com/jgillich/hyperdav"
version = "0.1.2"
authors = ["Jakob Gillich <jakob@gillich.me>"]
license = "MIT"
documentation = "http://jgillich.github.io/hyperdav/hyperdav/webdav/index.html"

[dependencies]
xml-rs = "0.3"
reqwest = "0.8"
url = "1.1"
failure = "0.1"
hyper = "0.11"

[dev-dependencies]
uuid = "0.1"
